--- a/about.html
+++ b/about.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about_style.css">
+    <link rel="stylesheet" href="styles/about_style.css">
     <title>About me</title>
 </head>
 <body>
     <img src="assets/images/eu.jpg" alt="Anthony" id="eu">
     <div class="box-info">
-        <h2>Anthony Hildebrand Chendrik</h2>
+        <h2 class="titulo">Anthony Hildebrand Chendrik</h2>
         <p id="descricao">19 anos</p>
+        <h2 class="titulo">Hobbies e coisas que eu gosto</h2>
+        <ul>
+            <li><p>- Gosto de jogar videogame (to viciado em overwatch 2)</p></li>
+            <li><p>- Gosto de tocar violão, mas to um tempo sem praticar</p></li>
+            <li><p>- Pratico muay thai como esporte</p></li>
+            <li><p>- Gosto de animes</p></li>
+        </ul>
+        <h2 class="titulo">Tecnologias usadas</h2>
         <ul id="tecnologias">
             <li><p>- HTML</p></li>
             <li><p>- CSS</p></li>
             <li><p>- JAVASCRIPT</p></li>
+            <li><p>- EMAILJS</p></li>
         </ul>
     </div>
 </body>
